--- a/index.html
+++ b/index.html
@@ -4,22 +4,124 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/index.css" />
-		<title>N94-Team-work</title>
+		<title>Space</title>
 		<style type="text/tailwindcss">
 			@layer utilities {
 			}
 		</style>
 	</head>
 	<body>
-		<header></header>
+		<header
+			class="pt-[24px] md:pt-0 xl:pt-[40px] pl-[39px] xl:pl-[55px] flex items-center justify-between"
+		>
+			<a href="/">
+				<img src="./images/logo.svg" alt="Site logo" width="48" height="48" />
+			</a>
+			<nav
+				class="hidden md:w-[450px] md:flex xl:w-[830px] xl:flex relative bg-[#FFFFFF0a] backdrop-blur-md header-navbar py-[38px] pl-[48px] xl:pl-[123px] flex items-center gap-[37px] xl:gap-[48px]"
+			>
+				<span
+					class="w-[473px] absolute hidden xl:inline-block top-0 bottom-0 opacity-[4%] my-auto h-[2px] bg-[#ffffff] left-[-375px]"
+				></span>
+				<a class="flex items-center gap-[12px] text-white" href="/">
+					<strong class="font-bold hidden xl:block">00</strong>
+					<p
+						class="text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						Home
+					</p>
+				</a>
+				<a
+					class="flex items-center gap-[12px] text-white"
+					href="/destination.html"
+				>
+					<strong class="font-bold hidden xl:block">01</strong>
+					<p
+						class="text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						Destination
+					</p>
+				</a>
+				<a class="flex items-center gap-[12px] text-white" href="/crew.html">
+					<strong class="font-bold hidden xl:block">02</strong>
+					<p
+						class="text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						Crew
+					</p>
+				</a>
+				<a
+					class="flex items-center gap-[12px] text-white"
+					href="/technology.html"
+				>
+					<strong class="font-bold hidden xl:block">03</strong>
+					<p
+						class="text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						Technology
+					</p>
+				</a>
+			</nav>
+			<button class="block pr-[24px] md:hidden">
+				<img
+					src="./images/menu-icon.svg"
+					alt="Menu icon"
+					width="24"
+					height="21"
+				/>
+			</button>
+		</header>
 		<main>
-			<div class="containers"></div>
+			<section
+				class="pt-[48px] pb-[48px] md:pt-[106px] md:pb-[90px] xl:pt-[200px] xl:pb-[131px]"
+			>
+				<div class="containers">
+					<div
+						class="flex-col xl:flex xl:flex-row items-center xl:items-end gap-[81px] md:gap-[156px] xl:gap-[386px] justify-center"
+					>
+						<div
+							class="max-w-[480px] text-center xl:text-start mx-auto xl:mx-0"
+						>
+							<span
+								class="font-normal text-[16px] md:text-[20px] xl:text-[28px] text-[#d0d6f9] leading-[100%] tracking-[2.7px] md:tracking-[3.38px] xl:tracking-[4px] block mb-[16px] md:mb-[24px]"
+								>SO, YOU WANT TO TRAVEL TO</span
+							>
+							<h2
+								class="font-normal font-[Bellefair] text-[80px] md:text-[150px] text-[#ffffff] leading-[100px] md:leading-[150px] xl:leading-[100%] mb-[16px] md:mb-[24px]"
+							>
+								SPACE
+							</h2>
+							<p
+								class="font-normal text-[15px] md:text-[18px] text-[#d0d6f9] leading-[25px] md:leading-[32px]"
+							>
+								Let’s face it; if you want to go to space, you might as well
+								genuinely go to outer space and not hover kind of on the edge of
+								it. Well sit back, and relax because we’ll give you a truly out
+								of this world experience!
+							</p>
+						</div>
+						<div
+							class="mt-[108px] w-[150px] md:w-[242px] xl:w-[264px] mx-auto xl:mx-0"
+						>
+							<div
+								class="bg-white flex justify-center items-center pt-[68px] pb-[59px] pr-[27px] pl-[29px] md:py-[105px] md:px-[64px] rounded-[100%]"
+							>
+								<span
+									class="font-normal text-[20px] tracking-[1.25px] md:tracking-[2px] md:text-[32px] text-[#0b0d17]"
+									>EXPLORE</span
+								>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script>
 			tailwind.config = {
-			  theme: {
-			    extend: {}
+				theme: {
+					extend: {},
+				},
 			}
 		</script>
 	</body>
