--- a/spacecapsule.html
+++ b/spacecapsule.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/spaceport.css" />
+    <link rel="stylesheet" href="./css/spacecapsule.css" />
     <title>Space</title>
     <style type="text/tailwindcss">
         @layer utilities {
@@ -69,25 +69,25 @@
                         <span
                             class="hover:bg-white hover:text-black duration-300 w-[80px] h-[80px] border border-white  text-[#FFFFFF]  rounded-full flex items-center justify-center font-normal text-[32px] ">1</span>
                     </a>
-                    <a href="#">
+                    <a href="./spaceport.html" target="_blank">
                         <span
                             class="hover:bg-white hover:text-black duration-300 w-[80px] h-[80px] border border-white text-[#FFFFFF]  rounded-full flex items-center justify-center font-normal text-[32px] ">2</span>
                     </a>
-                    <a href="./spacecapsule.html" target="_blank">
+                    <a href="#">
                         <span
                             class="hover:bg-white hover:text-black duration-300 w-[80px] h-[80px] border border-white text-[#FFFFFF]  rounded-full flex items-center justify-center font-normal text-[32px] ">3</span>
                     </a>
                 </div>
                 <div class="pt-[137px]">
                     <span class="text-[#D0D6F9] text-[16px] font-normal tracking-[2.7]">THE TERMINOLOGY…</span>
-                    <h2 class="font-normal text-[56px] loading-[1] text-[#FFFFFF] mt-[11px]">SPACEPORT</h2>
-                    <p class="w-[444px] text-[#D0D6F9] text-[18px] loading-[32px] mt-[17px]">A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth’s rotation for launch.</p>
+                    <h2 class="font-normal text-[56px] loading-[1] text-[#FFFFFF] mt-[11px]">SPACE CAPSULE</h2>
+                    <p class="w-[444px] text-[#D0D6F9] text-[18px] loading-[32px] mt-[17px]">A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.</p>
                 </div>
             </div>
         </div>
     </div>
         <div class="pt-[136px] pb-[101px]">
-            <img src="./images/img2.png" alt="crew people" width="515" height="527" />
+            <img src="./images/img.jpg" alt="crew people" width="515" height="527" />
         </div>
     </main>
     <script src="https://cdn.tailwindcss.com"></script>
