--- a/crewpage2.html
+++ b/crewpage2.html
@@ -22,7 +22,7 @@
 				/>
 			</a>
 			<nav
-				class="nav-link w-[830px] relative bg-[rgba(255,255,255,0.04)] header-navbar py-[38px] pl-[123px] flex items-center gap-[48px]"
+				class="nav-link w-[900px] relative bg-[rgba(255,255,255,0.04)] header-navbar py-[38px] pl-[123px] flex items-center gap-[48px]"
 			>
 				<span
 					class="w-[430px] absolute top-0 bottom-0 my-auto h-[1px] span-bg left-[-380px]"
@@ -52,7 +52,7 @@
 
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
-					href="#"
+					href="./crew.html"
 					target="_blank"
 				>
 					<strong class="font-bold">03</strong>
@@ -64,7 +64,7 @@
 
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
-					href="./technology.html "
+					href="./technology.html"
 					target="_blank"
 				>
 					<strong class="font-bold">04</strong>
@@ -91,29 +91,30 @@
 					</div>
 					<div class="pt-[154px]">
 						<span
-							class="font font-normal text-[32px] leading-[1] uppercase text-[#D0D6F9] strong-clr"
-							>Commander
+							class="font-normal text-[32px] leading-[1] uppercase text-[#D0D6F9] strong-clr"
+							>Mission Specialist
 						</span>
 						<h2
-							class="font w-[500px] font-normal text-[56px] leading-[1] text-[#FFFFFF] uppercase pt-[15px]"
+							class="w-[600px] font-normal text-[56px] leading-[1] text-[#FFFFFF] uppercase pt-[15px]"
 						>
-							Douglas Hurley
+							MARK SHUTTLEWORTH
 						</h2>
 						<p
 							class="w-[444px] font-normal text-[18px] leading-[32px] text-[#D0D6F9] pt-[27px] pb-[76px]"
 						>
-							Douglas Gerald Hurley is an American engineer, former Marine Corps
-							pilot and former NASA astronaut. He launched into space for the
-							third time as commander of Crew Dragon Demo-2.
+							Mark Richard Shuttleworth is the founder and CEO of Canonical, the
+							company behind the Linux-based Ubuntu operating system.
+							Shuttleworth became the first South African to travel to space as
+							a space tourist.
 						</p>
 						<div class="flex items-center justify-start gap-[24px]">
 							<a
-								href="#"
+								href="./crew.html"
 								target="_blank"
 								class="w-[15px] h-[15px] rounded-full bg-gray-700 hover:bg-white transition-colors"
 							></a>
 							<a
-								href="./crewpage2.html"
+								href="#"
 								target="_blank"
 								class="w-[15px] h-[15px] rounded-full bg-gray-700 hover:bg-white transition-colors"
 							></a>
@@ -130,9 +131,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="pt-[62px]">
+				<div class="pt-[110px]">
 					<img
-						src="./images/image-removebg-preview(289).png"
+						src="./images/mark-img.png"
 						alt="crew people"
 						width="568"
 						height="712"
