--- a/mars.html
+++ b/mars.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/destination.css" />
-		<title>N94-Team-work</title>
+		<title>Destination</title>
 		<style type="text/tailwindcss">
 			@layer utilities {
 			}
@@ -25,10 +25,11 @@
 				class="w-[830px] relative bg-[rgba(255,255,255,0.04)] header-navbar py-[38px] pl-[123px] flex items-center gap-[48px]"
 			>
 				<span
-					class="w-[430px] absolute top-0 bottom-0 my-auto h-[1px] span-bg left-[-380px]"
+					class="w-[473px] absolute top-0 bottom-0 my-auto h-[1px] span-bg left-[-440px]"
 				></span>
 				<a
-					href="/"
+					href="./index.html"
+					target="_blank"
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 				>
 					<strong class="font-bold">00</strong>
@@ -40,6 +41,7 @@
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 					href="./destination.html"
+					target="_blank"
 				>
 					<strong class="font-bold">01</strong>
 					<p class="font-normal">DESTINATION</p>
@@ -51,6 +53,7 @@
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 					href="./crew.html"
+					target="_blank"
 				>
 					<strong class="font-bold">03</strong>
 					<p class="font-normal">CREW</p>
@@ -62,6 +65,7 @@
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 					href="./technology.html"
+					target="_blank"
 				>
 					<strong class="font-bold">04</strong>
 					<p class="font-normal">TECHNOLOGY</p>
@@ -73,7 +77,7 @@
 		</header>
 
 		<main>
-			<div class="containers pb-[118px]">
+			<section class="containers pb-[118px]">
 				<div class="flex pt-[76px] gap-[28px]">
 					<span
 						class="font-barlow font-semibold text-[28px] leading-[1] tracking-[4.72px] span-clr"
@@ -89,19 +93,20 @@
 					<div>
 						<img
 							class="rotate"
-							src="./images/hero-moon.png"
-							alt="Moon"
+							src="./images/mars.png"
+							alt="Mars"
 							width="445"
 							height="445"
 						/>
 					</div>
-					<div class="max-w-[445px]">
+					<div class="">
 						<nav
-							class="flex gap-[35px] text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px]"
+							class="flex gap-[35px] text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1]"
 						>
 							<a
 								class="text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px] relative group uppercase tracking-[2px]"
-								href="#"
+								href="./destination.html"
+								target="_blank"
 								>MOON
 								<span
 									class="absolute left-0 bottom-[-20px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
@@ -109,7 +114,7 @@
 							</a>
 							<a
 								class="text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px] relative group uppercase tracking-[2px]"
-								href="./mars.html"
+								href="#"
 								>MARS
 								<span
 									class="absolute left-0 bottom-[-20px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
@@ -117,7 +122,8 @@
 							</a>
 							<a
 								class="text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px] relative group uppercase tracking-[2px]"
-								href="#"
+								href="./europa.html"
+								target="_blank"
 								>EUROPA
 								<span
 									class="absolute left-0 bottom-[-20px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
@@ -125,21 +131,23 @@
 							</a>
 							<a
 								class="text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px] relative group uppercase tracking-[2px]"
-								href="#"
+								href="./titan.html"
+								target="_blank"
 								>TITAN
 								<span
 									class="absolute left-0 bottom-[-20px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
 								></span>
 							</a>
 						</nav>
-						<h2 class="font-normal text-[150px] loading-[1] text-[#FFFFFF]">
-							MOON
+						<h2 class="font-normal text-[130px] loading-[1] text-[#FFFFFF]">
+							MARS
 						</h2>
-						<p class="mt-[30px] text-[#D0D6F9] text-[18px] loading-[32px]">
-							See our planet as you’ve never seen it before. A perfect relaxing
-							trip away to help regain perspective and come back refreshed.
-							While you’re there, take in some history by visiting the Luna 2
-							and Apollo 11 landing sites.
+						<p
+							class="mt-[30px] text-[#D0D6F9] text-[18px] loading-[32px] w-[444px]"
+						>
+							Don’t forget to pack your hiking boots. You’ll need them to tackle
+							Olympus Mons, the tallest planetary mountain in our solar system.
+							It’s two and a half times the size of Everest!
 						</p>
 						<hr class="mt-[54px] hr-clr" />
 						<div class="mt-[28px] flex gap-[79px]">
@@ -156,17 +164,17 @@
 							<p
 								class="text-[#FFFFFF] font-barlow font-normal text-[28px] leading-[1] uppercase"
 							>
-								384,400 km
+								225 MIL. km
 							</p>
 							<p
 								class="text-[#FFFFFF] font-barlow font-normal text-[28px] leading-[1] uppercase"
 							>
-								3 days
+								9 months
 							</p>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 		</main>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script>
