--- a/titan.html
+++ b/titan.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/destination.css" />
-		<title>N94-Team-work</title>
+		<title>Destination</title>
 		<style type="text/tailwindcss">
 			@layer utilities {
 			}
@@ -28,7 +28,8 @@
 					class="w-[430px] absolute top-0 bottom-0 my-auto h-[1px] span-bg left-[-380px]"
 				></span>
 				<a
-					href="/"
+					href="./index.html"
+					target="_blank"
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 				>
 					<strong class="font-bold">00</strong>
@@ -40,6 +41,7 @@
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 					href="./destination.html"
+					target="_blank"
 				>
 					<strong class="font-bold">01</strong>
 					<p class="font-normal">DESTINATION</p>
@@ -51,6 +53,7 @@
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 					href="./crew.html"
+					target="_blank"
 				>
 					<strong class="font-bold">03</strong>
 					<p class="font-normal">CREW</p>
@@ -62,6 +65,7 @@
 				<a
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 					href="./technology.html"
+					target="_blank"
 				>
 					<strong class="font-bold">04</strong>
 					<p class="font-normal">TECHNOLOGY</p>
@@ -73,7 +77,7 @@
 		</header>
 
 		<main>
-			<div class="containers pb-[118px]">
+			<section class="containers pb-[118px]">
 				<div class="flex pt-[76px] gap-[28px]">
 					<span
 						class="font-barlow font-semibold text-[28px] leading-[1] tracking-[4.72px] span-clr"
@@ -89,8 +93,8 @@
 					<div>
 						<img
 							class="rotate"
-							src="./images/hero-moon.png"
-							alt="Moon"
+							src="./images/titan.png"
+							alt="Titan"
 							width="445"
 							height="445"
 						/>
@@ -101,7 +105,8 @@
 						>
 							<a
 								class="text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px] relative group uppercase tracking-[2px]"
-								href="#"
+								href="./destination.html"
+								target="_blank"
 								>MOON
 								<span
 									class="absolute left-0 bottom-[-20px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
@@ -110,6 +115,7 @@
 							<a
 								class="text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px] relative group uppercase tracking-[2px]"
 								href="./mars.html"
+								target="_blank"
 								>MARS
 								<span
 									class="absolute left-0 bottom-[-20px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
@@ -117,7 +123,8 @@
 							</a>
 							<a
 								class="text-[#FFFFFF] font-barlow font-normal text-[16px] leading-[1] tracking-[2.7px] relative group uppercase tracking-[2px]"
-								href="#"
+								href="./europa.html"
+								target="_blank"
 								>EUROPA
 								<span
 									class="absolute left-0 bottom-[-20px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
@@ -132,14 +139,14 @@
 								></span>
 							</a>
 						</nav>
-						<h2 class="font-normal text-[150px] loading-[1] text-[#FFFFFF]">
-							MOON
+						<h2 class="font-normal text-[130px] loading-[1] text-[#FFFFFF]">
+							TITAN
 						</h2>
 						<p class="mt-[30px] text-[#D0D6F9] text-[18px] loading-[32px]">
-							See our planet as you’ve never seen it before. A perfect relaxing
-							trip away to help regain perspective and come back refreshed.
-							While you’re there, take in some history by visiting the Luna 2
-							and Apollo 11 landing sites.
+							The only moon known to have a dense atmosphere other than Earth,
+							Titan is a home away from home (just a few hundred degrees
+							colder!). As a bonus, you get striking views of the Rings of
+							Saturn.
 						</p>
 						<hr class="mt-[54px] hr-clr" />
 						<div class="mt-[28px] flex gap-[79px]">
@@ -156,17 +163,17 @@
 							<p
 								class="text-[#FFFFFF] font-barlow font-normal text-[28px] leading-[1] uppercase"
 							>
-								384,400 km
+								1.6 BIL. km
 							</p>
 							<p
 								class="text-[#FFFFFF] font-barlow font-normal text-[28px] leading-[1] uppercase"
 							>
-								3 days
+								7 years
 							</p>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 		</main>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script>
