--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script>
 			tailwind.config = {
-			  theme: {
-			    extend: {}
+				theme: {
+					extend: {},
+				},
 			}
 		</script>
 	</body>
